[gd_scene load_steps=4 format=3 uid="uid://onm5iovbmy4q"]

[ext_resource type="Script" path="res://scenes/popups/popup_panel.gd" id="1_k3sp6"]
[ext_resource type="Texture2D" uid="uid://dmaqkcakf6m02" path="res://icon.svg" id="1_xpwd8"]
[ext_resource type="PackedScene" uid="uid://wvfllgl511r5" path="res://scenes/additional_function/jfa.tscn" id="2_kjf8d"]

[node name="PopupPanel" type="PanelContainer"]
offset_right = 404.0
offset_bottom = 203.0
script = ExtResource("1_k3sp6")
jfa_scene = ExtResource("2_kjf8d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 8

[node name="Pictures" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Raw" type="TextureRect" parent="VBoxContainer/MarginContainer2/Pictures"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 240)
layout_mode = 2
texture = ExtResource("1_xpwd8")
expand_mode = 1

[node name="Result" type="TextureRect" parent="VBoxContainer/MarginContainer2/Pictures"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 240)
layout_mode = 2
texture = ExtResource("1_xpwd8")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_bottom = 8

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="OpenButton" type="Button" parent="VBoxContainer/MarginContainer/Buttons"]
layout_mode = 2
size_flags_vertical = 8
text = "SELECT_FILE"

[node name="ConfirmButton" type="Button" parent="VBoxContainer/MarginContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
text = "CONFIRM"

[node name="CancelButton" type="Button" parent="VBoxContainer/MarginContainer/Buttons"]
layout_mode = 2
size_flags_vertical = 8
text = "CANCEL"

[node name="SaveChannelButton" type="Button" parent="VBoxContainer/MarginContainer/Buttons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "TO_CHANNEL3"

[node name="SaveFileButton" type="Button" parent="VBoxContainer/MarginContainer/Buttons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "SAVE_AS"

[node name="OpenFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png")

[connection signal="pressed" from="VBoxContainer/MarginContainer/Buttons/OpenButton" to="." method="_on_open_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/Buttons/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/Buttons/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/Buttons/SaveChannelButton" to="." method="_on_save_channel_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/Buttons/SaveFileButton" to="." method="_on_save_file_button_pressed"]
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_open_file_dialog_file_selected"]
